# koi-bot-client

./: .env.example  Cargo.toml  README.md
koi-bot/: Cargo.toml
koi-bot/src/: main.rs
tg-api/: Cargo.toml
tg-api/src/: bot.rs  consts.rs  lib.rs  storages.rs
tg-api/src/handlers/: callback_handlers.rs  dialogue_handlers.rs  mod.rs
tg-api/src/keyboards/: buy_buttons.rs  mod.rs
tg-api/src/requests/: mod.rs  on_chain.rs  server.rs
