[package]
name = "koi-bot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
tg-api = { path = "../tg-api" }
