[package]
name = "tg-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
ethers = { workspace = true }
dotenv = { workspace=true }
hashbrown = { workspace=true }
parking_lot = { workspace=true }
tonic = { workspace=true }
lazy_static = "1.4.0"
# --tracing
tracing-subscriber = {workspace=true}
